register annotations
maintain order

.

.

javadoc